--- a/css/styles.css
+++ b/css/styles.css
@@ -433,6 +433,10 @@ footer{
 		padding-left: 0.2rem;
 		font-size: 2rem;
 	}
+	
+	.navbar-toggler, .nav-link{
+		font-size : 2rem;
+	}
 
 	.intro-tagline{
 		top: 35%;
