--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,70 @@
+html{
+	scroll-behavior: smooth;
+}
+
 body{
+	margin-top: 3rem;
 	text-align: left;
-	font-family: 'Arvo', serif;
+	font-family: 'Poppins', serif;
 	background-color: #fff;
+	animation: fadeInAnimation ease 3s;
+    	animation-iteration-count: 1;
+    	animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
+}
+
+/*Fade Effect*/
+.fade {
+  opacity: 1;
 }
 
 
 /*Nav Bar*/
 .navbar{
 	padding: 0.3rem 3rem;
-	padding-left: 0.9rem;
+	padding-left: 3rem;
 	background-color: #0a1122;
-	text-align: center;
+	text-align: left;
 }
 
 .navbar-logo{
-	width: 9%;
+	width: 12%;
 	margin-right: 1rem;  
 	border-radius: 100%
+}
+
+.navbar-brand{
+	font-family: 'Rakkas', serif;
 }
 
 .nav-item{
 	padding: 0 18px;
 }
 
+.navbar-dark .navbar-nav .nav-link.active {
+    color: #ffd700;
+}
+
+.gold-text{
+	color: #FFD700;
+}
+
+
 /*To Make the CARAT Symbol INLINE with the LINK Besides it*/
 .navbar-dropdown-link{
 	display: inline;
+}
+
+.dropdown-menu p{
+	padding-left: 1rem;
 }
 
 .dropdown-item{
@@ -51,7 +90,7 @@ body{
 #cover-section{
 	height: 100vh;
 	padding: 0;
-	margin-top: 0px;
+	margin-top: -3rem;
 }
 
 #cover-section .blank{
@@ -65,7 +104,7 @@ body{
 
 .intro-tagline{
 	position: relative;
-	top: 54%;
+	top: 53%;
 	transform: translateY(-50%);
 	font-size: 3rem;
 	padding: 3.5rem;
@@ -75,7 +114,7 @@ body{
 
 .intro-background{
 	position: absolute;
-	z-index: -1;
+	z-index: 0;
 	background-color: rgba(10,33,50,1);
 	height: 100vh;
 }
@@ -84,10 +123,11 @@ body{
 	position: relative;
 	top: 50%;
 	left: 10%;
-	font-size: 2rem;
-	font-weight: 700;
+	font-size: 1.8rem;
+	font-family: 'Rakkas', serif;
+	font-weight: 300;
 	text-align: center;
-	color: #fafafa;
+	color: #dadada;
 }
 
 .intro-background .carousel-item{
@@ -96,24 +136,30 @@ body{
 	height: 100vh;
 }
 
-.intro-background .carousel-item{
-	opacity: 0;
-	transition-duration: 2s;
-	transition-property: opacity;
+/*To PROPERLY FADE-TRANSITION (remove ".slide" in HTML CODE first) and ADD this*/
+.intro-background .carousel.carousel-fade .carousel-item {
+    display: block;
+    opacity: 0;
+    transition: opacity ease-out 2s;
+    left: 0;
+    top: 0;
+    position: absolute;
+}
+.intro-background .carousel.carousel-fade .carousel-item.active {
+    opacity: 1 !important;
+}
+.intro-background .carousel.carousel-fade .carousel-item:first-child {
+    top: auto;
+    position: relative;
+    transition: opacity ease-out 2s;
+}
+.intro-background .carousel.carousel-fade .carousel-item:second-child {
+    top: auto;
+    position: relative;
+    transition: opacity ease-out 2s;
 }
 
-.carousel-fade .carousel-item.active, .carousel-fade .carousel-item-next.carousel-item-left, .carousel-fade .carousel-item-prev.carousel-item-right{
-	opacity: 1;
-}
 
-.carousel-fade .active.carousel-item-left, .carousel-fade .active.carousel-item-right{
-	opacity: 0;
-} 
-
-.carousel-fade .carousel-item-next, .carousel-fade .carousel-item-prev, .carousel-fade .carousel-item.active, .carousel-fade .active.carousel-item-left, .carousel-fade .active.carousel-item-prev{
-	transform: translateX(0);
-	transform: translate3d(0,0,0);
-}
 .intro-background .col-lg-9{
 	padding: 0;
 }
@@ -210,14 +256,17 @@ body{
 	padding-bottom: 5rem;
 }
 
-#brochure-download-button{
+#about-us-button{
 	background-color: rgba(11,37,53,1);
 	color: #fff;
+	transition: 0.5s;
+	border-radius: 0;
 }
 
-#brochure-download-button:hover{
-	background-color: rgba(27,91,159,1);
-	font-weight: bold;
+#about-us-button:hover{
+	background-color: #0a2655;
+	letter-spacing: 2px;
+	transition: .5s;
 }
 
 
@@ -472,7 +521,7 @@ th,td:hover{
 
 /*Our Services Accordion*/
 #our-services-accordion{
-	padding: 1rem 4rem 4rem;
+	padding: 1rem 4rem 5rem;
 }
 
 /*Electrical Services*/
@@ -508,10 +557,112 @@ th,td:hover{
 	color: #000;
 }
 
-/*Utilities (i.e Pipe Calculator and Pipe Chart)*/
+
+/*About Us Page*/
+hr#about-us-divider{
+	text-align: center;
+	width: 3rem;
+	border-color: #0a1155;
+	border-style: dotted;
+	border-width: 0.5rem 0 0 0;
+}
+
+.about{
+	position: relative;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap-reverse;
+}
+
+.about .content-box{
+	width: 50%;
+	min-width: 50%;
+	text-align: end;
+	padding-right: 3rem;
+}
+
+.about .content-box .titleText{
+	font-weight: 700;
+	color: #000;
+	font-size: 3rem;
+	margin-bottom: 1rem;
+	text-align: end;
+}
+
+.text{
+	color: #000;
+	font-size: 1.2rem;
+	text-align: justify;
+}
+
+.about .img-box{
+	position: relative;
+	min-width: 50%;
+	width: 50%;
+	min-height: 650px;
+}
+
+.img-box .fitBg{
+	opacity: 0.8;
+	height: 650px;
+}
+
+.highlight{
+	color: #0a2655;
+}
+
+.content-box .logo{
+	position: relative;
+	min-width: 50%;
+	display: flex;
+	justify-content: space-between;
+	color: #fff;
+}
+
+
+.logo .img-box{
+	display: flex;
+	position: relative;
+	top: 50%;
+	transform: translateY(35%);
+	/*justify-content: center;*/
+	/*align-items: center;*/
+}
+
+.logo .img-box img{
+	max-width: 400px;
+	height: 400px;
+}
+.logo{
+	color: #000;
+	position: relative;
+	bottom: 6rem;
+	padding-left: 3rem;
+	letter-spacing: 2px;
+}
+
+/*Vision*/
+.text li{
+	margin-left: 2rem;
+}
+
+
+
+
+
+
+
+/*Utilities Page(i.e Pipe Calculator and Pipe Chart)*/
 #utilities{
-	background-color: rgba(1,27,57,1);
-	padding: 4rem 2rem 5rem;
+	margin-top: 3rem;
+	background-color: #ddd;
+	padding: 2rem 2rem 3rem;
+}
+
+#utilities form{
+	padding: 0 5rem;
 }
 
 #utility-menu{
@@ -521,16 +672,35 @@ th,td:hover{
 }
 
 .utility-menu{
-	padding:0 2rem 2rem 0; 
+	/*background-color: rgba(1,27,57,1);*/
+	padding:0 2rem;
+	padding-right: 4rem;
 }
 
-.utility-menu-button-list{
-	display: inline;
-}
 
 .utility-menu-button{
 	margin: 0.2rem 1rem;
 	width: 100%;
+	background-color: rgba(1,27,57,1);
+	border-color: rgba(1,27,57,1);
+	font-size: 1rem;
+	font-weight: 300;
+}
+
+.utility-menu-button.btn-dark:hover{
+	background-color: #d9a100;
+}
+
+.btn-dark:not(:disabled):not(.disabled):active, .btn-dark:not(:disabled):not(.disabled).active, .show > .btn-dark.dropdown-toggle {
+    color: #fff;
+    background-color: #bb8c00;
+    border-color: #bb8c00;
+}
+
+
+.utility-item{
+	/*margin-top: 1rem;*/
+	/*padding-top: 2rem;*/
 }
 
 .utilities-text{
@@ -546,10 +716,14 @@ th,td:hover{
 
 /*Note - Combining the Background PROPERTIES in these WON'T WORK*/
 #pipe-chart, #pipe-calculator, #steel-sheet-calculator{
-	border-radius: 3%;
-	margin: 0 1rem;
-	height: 35rem;
+	/*margin: 0 1rem;*/
+	height: 100%;
 	cursor: pointer;
+	padding-bottom: 4rem;
+}
+
+.calculate-button{
+	margin: 1rem 0;
 }
 
 #pipe-chart{
@@ -577,16 +751,6 @@ th,td:hover{
 	font-weight: bold;
 }
 
-/*#pipe-chart:hover{
-	background: linear-gradient(to bottom, rgba(27, 91, 159, 0.6), rgba(27,91,159,1)), url("../images/pipe_chart.jpg");
-	background-size: cover;
-}*/
-
-/*#pipe-calculator:hover{
-	background: linear-gradient(to bottom, rgba(27, 91, 159, 0.6), rgba(27,91,159,1)), url("../images/pipe_calculator.jpg");
-	background-size: cover;
-}*/
-
 /*The FORM where user enters details for Pipe-Calculator*/
 #pipe-calculator-form, #steel-sheet-calculator-form{
 	/*Initially We want the FORM to be HIDDEN*/
@@ -595,7 +759,7 @@ th,td:hover{
 	top: 50%;
 	transform: translateY(-50%);
 	color: #fff;
-	font-size: 1.2rem;
+	font-size: 1rem;
 	text-align: center;
 }
 
@@ -610,124 +774,34 @@ th,td:hover{
 	margin: 1rem;
 }
 
-/*NAQSH*/
-#naqsh{
-	background-color: #fff;
+
+/*Partners*/
+#partners{
+	margin: 0;
+	padding: 5rem 3rem;
+	box-sizing: border-box;
+	justify-content: center;
+	align-items: center;
 	height: 40rem;
-	height: 100%;
-	width: 100%;
-	padding-top: 2rem; 
 }
 
-#naqsh-cover{
-	height: 100%;
-	padding: 2rem 2rem 4rem 4rem;
-}
-.naqsh-cover-text{
-	position: relative;
-	top: 50%;
-	transform: translateY(-50%);
+#partners h1{
+	text-align: center;
+	font-family: 'Rakkas', serif;;
 }
 
-.naqsh-cover-text p, .naqsh-cover-text h1{
-	margin-bottom: 0; 
-}
-
-.naqsh-cover-text h1{
-	font-size: 6.5rem;
-	color: #431e0c;
-	font-weight: 700;
-}
-
-.naqsh-cover-text .intro-text{
-	color: #f00;
-	font-style: italic;
-}
-
-.naqsh-cover-text .subheading{
-	text-align: right;
-	font-weight: bold;
-}
-
-#naqsh-button{
-	text-align: left;
-	padding-top: 1rem;
-}
-#naqsh-button .btn-outline-dark:hover{
-	background-color: #734e3c;
-}
-
-#naqsh-cover img{
-	height: 15rem;
-	width: 100%;
-	padding: 0.5rem;
-}
-
-.grow img{
-	transition: 1s ease;
-}
-
-.grow img:hover{
-	-webkit-transform: scale(1.1);
-	-ms-transform: scale(1.1);
-	transform: scale(1.1);
-	transition: 1s ease;
-	position: relative;
-	z-index: 2;
-}
-
-.naqsh-img-text-above{
-	padding-top: 1rem;
-	padding-bottom: 8px;
-}
-
-.naqsh-img-text-below{
-	padding-top: 8px;
-	padding-bottom: 1rem; 
-}
-
-.naqsh-img-text-left{
-	text-align: left;
-}
-
-.naqsh-img-text-right{
-	text-align: right;
+#partner-afco img{
+	height: 350px;
+	width: 350px;
+	padding: 2rem;
+	opacity: 0.7;
 }
 
 
-
-#naqsh-body{
-	/*background-color: #633e2c;*/
-	/*background-color: #5f2e18;*/
-	background-color: #431e0c;
-	color: #fff;
-	padding: 2rem 4rem;
-	line-height: 1.8;
+#partner-afco img:hover{
+	opacity: 1;
 }
 
-.about-naqsh{
-	padding: 2rem 4rem 2rem 1rem;
-}
-.naqsh-products{
-	padding: 2rem 1rem 2rem 8rem;
-}
-.naqsh-services{
-	padding: 2rem 5rem 2rem 2rem;
-}
-.naqsh-products ul, .naqsh-services ul{
-	list-style-type: none;
-	padding-left: 0.5rem;
-}
-
-.naqsh-products a, .naqsh-services a{
-	color: #aaa;
-	text-decoration: none;
-}
-
-.naqsh-products a:hover, .naqsh-services a:hover{
-	color: #fff;
-	font-weight: bold;
-}
 
 /*Contact Us*/
 #contact-us{
@@ -749,7 +823,6 @@ th,td:hover{
 
 .contact-us-icon:hover{
 	color: #1b5b9f;
-	/*color: #1a3142;*/
 }
 
 .contact-us-headline{
@@ -771,48 +844,177 @@ th,td:hover{
 
 
 
-/*cta (i.e the End Call To Action or "Request Quote" Form)*/
-#cta{
-	padding: 5% 4rem;
-	text-align: left;
-	font-size: 1rem;
-	background-color: #0a2132;
-	color: #fff;
-}
-
-#cta form{
-	padding-bottom: 1rem;
-	text-align: left;
-}
-
-#cta .form-note{
-	text-align: left;
-	padding: 1rem;
-}
-
-#cta form button{
-	text-align: center;
-	margin-top: 1rem;
-}
-
-/*To ALIGN the FORM BUTTONS to CENTER (Both the Pipe Calculator as well as The Quote Form)*/
-.button-center{
-	text-align: center;
-	width: 100%;
-	margin-top: 1rem; 
-}
-
-
-/*Footer*/
+/*FOOTER*/
 footer{
-	/*background-color: #0a1122;*/
-	background-color: #fff;
-	color: #555;
-	font-size: 0.9rem;
-	padding: 0.4rem;
-	font-size: 0.8rem;
-	text-align: center;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	flex-direction: column;
 }
+
+#footer{
+	position: relative;
+	width: 100%;
+	height: auto;
+	color: #fff;
+	background: #0a1122;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	padding: 2rem 5rem;
+}
+
+#footer .footer-container{
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	flex-direction: row;
+}
+
+#footer .footer-container .sec{
+	margin-right: 30px;
+}
+
+#footer .footer-container .sec.about-us{
+	padding: 0.5rem;
+	width: 40%;
+}
+
+#footer .footer-container h2{
+	font-family: 'Rakkas', serif;
+	position: relative;
+	color: #fff;
+	font-weight: 500;
+	margin-bottom: 1rem;
+}
+
+#footer .footer-container h2::before{
+	content: '';
+	position: absolute;
+	bottom: -5px;
+	left: 0;
+	width: 4rem;
+	height: 2px;
+	background: #bb8c00;
+}
+
+#footer .footer-container .sec.about-us p{
+	color: #999;
+}
+
+
+#footer .footer-container .sec.about-us{
+	width: 30%;
+}
+
+.sci{
+	margin-top: 2rem;
+	display: flex;
+	padding-left: 0;
+}
+
+
+.sci li{
+	list-style: none;
+}
+
+.sci li a{
+	width: 3rem;
+	height: 3rem;
+	background: #222;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-right: 1rem;
+	text-decoration: none;
+	border-radius: 0.5rem;
+}
+
+.sci .contact-us-icon{
+	color: #fff;
+	font-size: 1.5rem;
+	padding-bottom: 0rem; 
+}
+
+.sci li a{
+	background: #774800;
+}
+
+.sci li a:hover{
+	background: #bb8c00;
+}
+
+
+.contactus{
+	width: 30%;
+	padding: 0.5rem;
+	margin-right: 0 !important;
+}
+
+.contactus .info{
+	position: relative;
+	padding-left: 0;
+}
+
+.contactus .info li{
+	display: flex;
+	margin-bottom: 1rem;
+	color: #999;
+}
+
+.contactus .info li span{
+	color: #999;
+	font-size: 1.3rem;
+	margin-right: 10px
+}
+
+.contactus .info li a{
+	color: #999;
+	text-decoration: none;
+}
+
+.contactus .info li a:hover{
+	color: #bb8c00;
+}
+
+.contactus .cta-email, .contactus .cta-message{
+	width: 100%;
+	margin-bottom: 0.5rem;
+	padding: 0.3rem;
+}
+
+.contactus .cta-message{
+	height: 10rem;
+}
+
+.contactus .cta-button{
+	text-decoration: ;
+	background: #774800;
+	border-radius: 0.5rem;
+	border-style: none;
+
+}
+
+.contactus .cta-button:hover{
+	background: #bb8c00;
+}
+
+
+
+/*COPYRIGHT TEXT*/
+.copyrightText{
+	width: 100%;
+	background: #bb8c00;
+	padding: 5px;
+}
+
+.copyrightText p{
+	margin-bottom: 0;
+	color: #fff;
+	text-align: center;
+	font-size: 0.8rem;
+}
+
 
 
 
@@ -875,10 +1077,16 @@ footer{
 	#brochure-download-button{
 		font-size: 2rem;
 	}
+	#utilities form{
+		padding: 0;
+	}
 	#pipe-chart, #pipe-calculator{
 		margin: 2rem 0;
+		height: 44rem;
 		background-size: cover;
 		background-position: center;
+		position: static;
+		background-attachment: fixed;
 	}
 	/*#pipe-chart:hover, #pipe-calculator:hover{
 		background-size: cover;
@@ -900,30 +1108,6 @@ footer{
 	td{
 		font-size: 1.5rem;
 		text-align: center;
-	}
-	.naqsh-cover-text .subheading, #naqsh-button, #naqsh-button a{
-		text-align: center;
-		font-size: 2rem
-	}
-	.naqsh-img-text-left, .naqsh-img-text-right {
-		text-align: left;
-		font-size: 2rem;
-	}
-	.naqsh-body{
-		text-align: center;
-	}
-	.about-naqsh{
-		font-size: 2rem;
-	}
-	.naqsh-products, .naqsh-services{
-		padding: 0;
-	}
-	.naqsh-products h2, .naqsh-services h2{
-		font-size: 3rem;
-	}
-	.naqsh-products ul, .naqsh-services ul{
-		padding-left: 0;
-		font-size: 1.5rem;
 	}
 	.contact-us-icon{
 		font-size: 6rem;
@@ -947,5 +1131,37 @@ footer{
 	.form-note h6{
 		font-size: 1.5rem;
 	}
+	#footer{
+		padding: 2.5rem;
+	}
+	#footer-container{
+		flex-direction: column;
+	}
+	.footer-container .sec{
+		margin-right: 0;
+		margin-bottom: 2.5rem;
+	}
+	#footer h2{
+		font-size: 2rem;
+	}
+	#footer .sec.about-us{
+		display: none;
+	}
+	#footer .sec.contactus{
+		display: block;
+		width: 100%;
+		text-align: center;
+		font-size: 1.5rem;
+	}
+	#footer .footer-container h2::before{
+		left: 50%;
+		transform: translateX(-50%);
+		width: 10rem;
+	}
+	#footer .contactus .info li{
+		display: block;
+		list-style: none;
+	}
+
 }
 
