--- a/css/styles.css
+++ b/css/styles.css
@@ -836,7 +836,7 @@ hr#about-us-divider{
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	font-size: 1rem;
+	font-size: 1em;
 }
 
 #partners h1{
