--- a/css/styles.css
+++ b/css/styles.css
@@ -836,7 +836,6 @@ hr#about-us-divider{
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	font-size: 1em;
 }
 
 #partners h1{
@@ -856,6 +855,7 @@ hr#about-us-divider{
 
 .partner-img p{
 	text-align: center;
+	font-size: 1rem;
 	color: #666;
 }
 
