--- a/css/styles.css
+++ b/css/styles.css
@@ -1342,7 +1342,7 @@ footer{
 	}
 	td{
 		font-size: 1.5rem;
-		text-align: center;
+		text-align: left;
 	}
 	.contact-us-icon{
 		font-size: 6rem;
